Reworked image loading and saving